 /* $Id: changelog,v 1.797 2000-03-11 09:09:55 jeroen Exp $ */

 2000-03-11: Jeroen van den Horn <J.vandenHorn@fibre.a2000.nl>
        - OPENGL: Fixed error preventing build to complete

 2000-03-09: Sander van Leeuwen <sandervl@xs4all.nl>
        - KERNEL32: Set initial max nr of file handles to 256 during kernel32 init
                    Create DDRAW & DSOUND registry keys in InitRegistry
                    (NOTE: Must be done in install program!)
                    Added some win95 stubs
        - GDI32:    Added 16 bits device apis stubs

 2000-03-10: Michal Necasek <mike@mendelu.cz>
        - dsound\new: Changed DART buffer size calcualation, hopefully
                      WinAmp will sound better now.


 2000-03-09: knut st. osmundsen <knut.stange.osmundse@pmsc.no>
        - include\pdwin32.tools: New tool, EXISTS --> \tools\bin\Exists.cmd
        - tools\bin\Exists.cmd: New tool which checks if the file passed in
                exists. If the file exists it returns 0, else 1. This is
                used to check if .depend and other files exists in the
                makefiles. (See pdwin32.post to see how.)
        - include\pdwin32.post: .depend is only included if it exists. You'll
                get a warning if it don't, but the makefile works fine.
                Added a check on OBJDIR not being empty in the clean rule.
                $(RM) $(OBJDIR)\* is will remove all files in the root dir if
                OBJDIR is empty.
        - win32k: Updated makefile with the use of EXISTS for both .depend and
                makfile.inc. An update check for makefile.inc <-> configure.cmd
                was also added.
                Added checks for empty variables in clean rule, and we no longer
                deletes * in any directory.

        A CVS tip:
            When new directories are added you have to to a 'cvs checkout .'
            from the root.
            A 'cvs update' don't get the new directories it seems